# TianHeDoc

./: KEYWORLDS-en.md  KEYWORLDS.md  LICENSE  README-en.md  README.md  main.cpp
Windows/: main.cpp
Windows/DocForWindows/: CMakeLists.txt  main.cpp
Windows/Releases/: CMakeCache.txt  DocForWindows.cbp  Makefile  cmake_install.cmake
Windows/Releases/.cmake/api/v1/reply/: cache-v2-fc018760efa56a665ab1.json  cmakeFiles-v1-af3f94c101fca2b033ff.json  (+4 more)
Windows/Releases/DocForWindows_autogen/: moc_predefs.h
Windows/TianH-Doc/: CMakeLists.txt  TianH-Doc.pro  main.cpp
Windows/build-DocForWindows-Desktop_Qt_5_14_2_MinGW_32_bit-Debug/: CMakeCache.txt  DocForWindows.cbp  Makefile  cmake_install.cmake
Windows/build-DocForWindows-Desktop_Qt_5_14_2_MinGW_32_bit-Debug/DocForWindows_autogen/: moc_predefs.h
Windows/build-DocForWindows-Desktop_Qt_5_14_2_MinGW_32_bit-Debug/DocForWindows_autogen/EWIEGA46WW/: moc_mainwindow.cpp
macOS/: main.md
macOS/TianHeDoc/TianHeDoc/: ContentView.swift  Landmarks.swift  TianHeDocApp.swift
macOS/TianHeDoc/TianHeDoc.xcodeproj/: project.pbxproj
macOS/TianHeDoc/TianHeDocTests/: TianHeDocTests.swift
macOS/TianHeDoc/TianHeDocUITests/: TianHeDocUITests.swift  TianHeDocUITestsLaunchTests.swift
test/: 1.txt
windows/TianHeDoc/: TianHeDoc.sln
windows/TianHeDoc/TianHeDoc/: DocForWindows.cpp  Resource.h  TianHeDoc.rc  TianHeDoc.vcxproj  TianHeDoc.vcxproj.filters
windows/TianHeDoc/TianHeDoc/Debug/: vc143.idb
windows/TianHeDoc/TianHeDoc/Debug/TianHeDoc.tlog/: TianHeDoc.lastbuildstate
windows/TianHeDoc/TianHeDoc/x64/Debug/: vc143.idb
(+9 files in other folders)
